Make dragging more visible. Switch to added step. Fix deletion

--- a/css/project-modal-editor.styl
+++ b/css/project-modal-editor.styl
@@ -10,6 +10,10 @@
   display: flex
   flex-wrap: wrap
   
+  .drag-reorderable [data-being-dragged]
+    opacity: 0.5
+    outline: 2px dashed lightgray
+
   .project-modal-step-list
     border: 1px solid rgba(gray,0.3)
     flex: 1 1 auto
